add typescript to keywords

--- a/package.json
+++ b/package.json
@@ -59,7 +59,8 @@
     "tag",
     "tagged",
     "template",
-    "template-tag"
+    "template-tag",
+    "typescript"
   ],
   "engines": {
     "node": ">= 8",
