force color on master

--- a/.github/workflows/npmpublish.yml
+++ b/.github/workflows/npmpublish.yml
@@ -8,6 +8,11 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    env:
+      CI: true
+      TERM: xterm-256color
+      FORCE_COLOR: 3
+
     steps:
       - uses: actions/checkout@v1
       - uses: actions/setup-node@v1
