--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
   "version": "1.0.0",
   "main": "dist/index.js",
   "files": [
-    "dist/index.d.ts",
-    "dist/index.js"
+    "dist/index.d.ts"
   ],
   "scripts": {
     "build": "tsc",
